fetch state on association, so we can display the attached weavr name.

--- a/templates/success.html
+++ b/templates/success.html
@@ -1,4 +1,5 @@
 <html><head><title>Success!</title>
-</head><body>Authorization complete!
+</head><body>Authorization complete! 
+Associated with '{{state.weavr}}'.
 You can now see the Prosthetic in the Editor.<br/ >
 (it will run every few hours automatically)</body></html>
